NDL-UpdateCode-Vignette

--- a/vignette/www/abm-sacada.bib
+++ b/vignette/www/abm-sacada.bib
@@ -513,3 +513,48 @@ author = {L. Morawska and G.R. Johnson and Z.D. Ristovski and M. Hargreaves and 
 keywords = {Expiratory-aerosol, Size-distribution, Hygroscopic, Modality, Evaporation, Human respiratory tract},
 abstract = {A new expiratory droplet investigation system (EDIS) was used to conduct the most comprehensive program of study to date, of the dilution corrected droplet size distributions produced during different respiratory activities. Distinct physiological processes were responsible for specific size distribution modes. The majority of particles for all activities were produced in one or more modes, with diameters below 0.8??m at average concentrations up to 0.75cm???3. These particles occurred at varying concentrations, during all respiratory activities, including normal breathing. A second mode at 1.8??m was produced during all activities, but at lower concentrations of up to 0.14cm???3. Speech produced additional particles in modes near 3.5 and 5??m. These two modes became most pronounced during sustained vocalization, producing average concentrations of 0.04 and 0.16cm???3, respectively, suggesting that the aerosolization of secretions lubricating the vocal chords is a major source of droplets in terms of number. For the entire size range examined of 0.3-20??m, average particle number concentrations produced during exhalation ranged from 0.1cm???3 for breathing to 1.1cm???3 for sustained vocalization. Non-equilibrium droplet evaporation was not detectable for particles between 0.5 and 20??m, implying that evaporation to the equilibrium droplet size occurred within 0.8s.}
 }
+
+
+@article{Nicas2005,
+author = { Mark   Nicas  and  William W.   Nazaroff  and  Alan   Hubbard },
+title = {Toward Understanding the Risk of Secondary Airborne Infection: Emission of Respirable Pathogens},
+journal = {Journal of Occupational and Environmental Hygiene},
+volume = {2},
+number = {3},
+pages = {143-154},
+year  = {2005},
+publisher = {Taylor & Francis},
+doi = {10.1080/15459620590918466},
+    note ={PMID: 15764538},
+URL = {https://doi.org/10.1080/15459620590918466
+},
+eprint = {https://doi.org/10.1080/15459620590918466
+}
+}
+
+@article{Duguid1946,
+   author = {Duguid J. P.},
+   title = {The size and the duration of air-carriage of respiratory droplets and droplet-nuclei},
+   journal = {The Journal of Hygiene},
+   volume = {44},
+   number = {6},
+   pages = {471-479},
+   DOI = {https://doi.org/10.1017%2Fs0022172400019288},
+   url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2234804/},
+   year = {1946},
+   type = {Journal Article}
+}
+
+@article{Kennedy2009,
+title = {Modeling aerosol transmission of SARS-CoV-2 in multi-room facility},
+journal = {Journal of Loss Prevention in the Process Industries},
+volume = {69},
+pages = {104336},
+year = {2021},
+issn = {0950-4230},
+doi = {https://doi.org/10.1016/j.jlp.2020.104336},
+url = {https://www.sciencedirect.com/science/article/pii/S0950423020306239},
+author = {Matthew Kennedy and Sung Jin Lee and Michael Epstein},
+keywords = {Airborne transmission, SARS-CoV-2 transmission, SARS-CoV-2 infection, COVID 19, Facility modeling},
+abstract = {The versatile and computationally attractive FATET facility software package for analyzing the transient behavior of facilities during normal and off-normal conditions is applied to the problem of SARS-CoV-2 virus transmission in single-and multi-room facilities. Subject to the justifiable assumptions of non-interacting virus droplets, room-wide spatially homogeneous virus droplet aerosols and droplet sedimentation in accordance with Stokes law; the FATE code tracks the virus aerosol from a human source through a facility with a practical ventilation system which reconditions, filters, and recycles the air. The results show that infection risk can be reduced by 50 percent for increased facility airflow, 70 percent for increased airflow and the inclusion of a HEPA filter on recirculated ventilation air, and nearly 90 percent for increased airflow, inclusion of a HEPA filter, and wearing a mask. These results clearly indicate that there are operational changes and engineering measures which can reduce the potential infection risk in multi-room facilities.}
+}
